--- a/src/game/Player.css
+++ b/src/game/Player.css
@@ -1,7 +1,7 @@
 .player-container {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
-  max-width: 500px;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  max-width: 600px;
   border: 1px solid red;
   height: 50px;
   align-items: center;
