--- a/src/game-logic/Scoreboard.css
+++ b/src/game-logic/Scoreboard.css
@@ -50,3 +50,17 @@
   place-self: center;
   font-size: 72px;
 }
+
+.btn {
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  font-size: 16px;
+  background-color: rgb(121, 45, 45);
+  color: white;
+  margin: 0 auto;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
