Add styles for the start button and the box scores

--- a/src/game-logic/Scoreboard.css
+++ b/src/game-logic/Scoreboard.css
@@ -64,3 +64,10 @@
   left: 50%;
   transform: translateX(-50%);
 }
+
+.boxscore {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin-top: 20px;
+  padding: 50px;
+}
