Add heading styles

--- a/src/game/Boxscore.css
+++ b/src/game/Boxscore.css
@@ -1,3 +1,12 @@
 .boxscore {
   margin-top: 20px;
 }
+
+.boxscore-home,
+.boxscore-away {
+  margin-top: 50px;
+}
+
+.boxscore-heading {
+  text-align: center;
+}
