--- a/src/game/GameContainer.css
+++ b/src/game/GameContainer.css
@@ -2,6 +2,13 @@
   margin-bottom: 50px;
 }
 
+.game-container-btns {
+  display: flex;
+  justify-content: space-around;
+  width: 400px;
+  margin: 0 auto;
+}
+
 .btn {
   text-decoration: none;
   padding: 15px 40px;
@@ -10,8 +17,11 @@
   font-size: 16px;
   background-color: rgb(121, 45, 45);
   color: white;
-  margin: 0 auto;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+}
+
+.btn-disabled {
+  cursor: not-allowed;
+  pointer-events: none;
+  background-color: rgb(49, 49, 49);
+  opacity: 0.5;
 }
