--- a/src/game/Scoreboard.css
+++ b/src/game/Scoreboard.css
@@ -6,6 +6,7 @@
   border-radius: 100px;
   background-color: rgb(233, 233, 233);
   margin: 20px auto;
+  border: 4px solid rgb(75, 75, 75);
 }
 
 .minutes {
