--- a/src/game/Scoreboard.css
+++ b/src/game/Scoreboard.css
@@ -1,54 +1,81 @@
+@font-face {
+  font-family: Scoreboard;
+  src: url(../assets/scoreboard.ttf);
+}
+
 .scoreboard {
   display: grid;
   grid-template: 40% 20% 40% / 40% 20% 40%;
-  max-width: 500px;
+  max-width: 430px;
   height: 300px;
-  border-radius: 100px;
-  background-color: rgb(233, 233, 233);
+  border-radius: 50px;
+  background: linear-gradient(
+    135deg,
+    #1e5799 0%,
+    #2989d8 24%,
+    #207cca 85%,
+    #7db9e8 100%
+  );
   margin: 20px auto;
-  border: 4px solid rgb(75, 75, 75);
+  border: 4px solid #fff;
+  color: #fffcfc;
+  padding: 15px;
+  box-shadow: 0px 0px 15px black;
+}
+
+.minutes,
+.seconds,
+.home-score,
+.away-score,
+.quarter {
+  font-family: 'Scoreboard';
+  font-size: 72px;
+  color: #ffcf00;
+  border: 2px solid white;
+  background-color: black;
 }
 
 .minutes {
   place-self: center end;
-  font-size: 72px;
+  padding: 5px 10px 0px 10px;
+}
+
+.seconds {
+  padding: 5px 10px 0px 10px;
+  place-self: center start;
 }
 
 .colon-text {
   place-self: center;
   font-size: 72px;
+  font-weight: bold;
 }
 
-.seconds {
-  place-self: center start;
-  font-size: 72px;
-}
-
-.home-text {
+.home-text, .away-text {
   place-self: center;
   font-size: 32px;
+  font-weight: bold;
 }
 
 .quarter-text {
   place-self: end center;
-  font-size: 24px;
-}
-
-.away-text {
-  place-self: center;
-  font-size: 32px;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .home-score {
-  place-self: center;
-  font-size: 72px;
+  padding: 8px 15px 0px 15px;
+  place-self: flex-start center;
+  color: red;
 }
 
 .quarter {
   place-self: center;
-  font-size: 36px;
+  font-size: 48px;
+  padding: 5px 5px 0 5px;
 }
 .away-score {
-  place-self: center;
-  font-size: 72px;
+  padding: 8px 15px 0px 15px;
+  place-self: flex-start center;
+  color: red;
 }
